--- a/Nogomet/src/main/resources/dangerorganization/nogomet/unosmomcadi-taskform.form
+++ b/Nogomet/src/main/resources/dangerorganization/nogomet/unosmomcadi-taskform.form
@@ -3,4 +3,25 @@
 <property name="name" value="unosmomcadi-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
+<field position="0" name="momcad_id_nazivPrve" type="InputText" id="532464709">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;nazivPrve (momcad_id)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="inputBinding" value="momcad_in/nazivPrve"/>
+<property name="outputBinding" value="momcad_out/nazivPrve"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="1" name="momcad_id_nazivDruge" type="InputText" id="953140821">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;nazivDruge (momcad_id)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="momcad_in/nazivDruge"/>
+<property name="outputBinding" value="momcad_out/nazivDruge"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<dataHolder inputId="momcad_in" name="#E9E371" type="dataModelerEntry" outId="momcad_out" value="dangerorganization.nogomet.Momcad" id="momcad_id"/>
 </form>
